2010-01-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Drop procs `pg-set-client-data!', `pg-get-client-data'.

	* libpq.c (xc_t): Delete member `client'.
	(xc_mark): Update.
	(CONN_CLIENT): Delete cpp macro.
	(pg_connectdb): Update.
	(pg_get_client_data, pg_set_client_data): Delete funcs.

2010-01-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Drop proc `pg-lo-get-connection'.

	* libpq.c (lob_lo_get_connection): Delete func.

2010-01-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[C int] Add cast to silence compiler warning.

	* libpq.c (pg_mblen): Add cast in call to `PQmblen'.

2009-06-22  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 0.38 (tag v0.38)

2009-06-22  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Make `pg-parameter-status' accept symbol for PARM.

	* libpq.c (pg_parameter_status): Accept symbol as PARM.

2009-06-22  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Mention imminent demise of certain procs.

	* libpq.c (lob_lo_get_connection):
	Add "will be removed" notice to docstring.
	(pg_get_client_data, pg_set_client_data): Likewise.

2009-06-21  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Minimize "make -C doc/" work in default case.

	* Makefile.am (schemefrags, schemestems): New vars.
	(dotdocfiles): Delete postgres-resdisp.doc, postgres-types.doc,
	postgres-col-defs.doc, postgres-resx.doc, postgres-qcons.doc,
	postgres-gxrepl.doc, postgres-table.doc, postgres-meta.doc.
	(BUILT_SOURCES): Delete $(dotdocfiles).
	(dist_d_DATA): Use $(schemestems).
	(BUILT_SOURCES) [MAINTAINER_MODE]: Append $(dotdocfiles).

2009-06-21  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[config] Use CPPFLAGS, LDFLAGS directly.

	* Makefile.am (AM_CPPFLAGS): Delete var.
	(postgres_la_LDFLAGS): Remove $(LDFLAGS), $(PQ_LDFLAGS).
	(snarfcppopts): Remove $(AM_CPPFLAGS); add $(DEFAULT_INCLUDES).

2009-06-21  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[C int] Update #include:d files.

	* libpq.c: #include "config.h" instead of <config.h>;
	#include <stdlib.h>.

2009-06-20  Thien-Thi Nguyen  <ttn@gnuvola.org>
